fix: Cell padding on small tables

--- a/src/scss/config/_bootstrap-overrides.scss
+++ b/src/scss/config/_bootstrap-overrides.scss
@@ -142,8 +142,8 @@ $headings-color: $h-color;
 
 $table-cell-padding-y: 1rem;
 $table-cell-padding-x: 1rem;
-$table-cell-padding-y-sm: .5rem;
-$table-cell-padding-x-sm: .5rem;
+$table-cell-padding-y-sm: .75rem;
+$table-cell-padding-x-sm: .75rem;
 $table-border-color: $gray-200;
 
 
